@@ -76,7 +76,7 @@ object GraphCrystals : HUDModule("CrystalsGraph", "Graph showing the amount of c
         }
     }
 
-    override var width = 77F
-    override var height = 32F
+    override var width = 75F
+    override var height = 30F
 
 }
