@@ -40,7 +40,7 @@ object GraphPing : HUDModule("PingGraph", "Graph showing your ping") {
         }
     }
 
-    override var width = 77F
-    override var height = 32F
+    override var width = 75F
+    override var height = 30F
 
 }
