@@ -44,7 +44,7 @@ object GraphSpeed : HUDModule("SpeedGraph", "Graph showing your speed") {
         }
     }
 
-    override var width = 77F
-    override var height = 32F
+    override var width = 75F
+    override var height = 30F
 
 }
